edit match layout fix on mobile

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -85,8 +85,8 @@
 /* line 77, ../sass/partials/_fl-league.sass */
 .season-links {
   text-align: center;
-  -webkit-padding-start: 0;
-  -webkit-margin-after: 0;
+  padding: 0;
+  margin: 0;
 }
 /* line 82, ../sass/partials/_fl-league.sass */
 .season-links li {
@@ -158,33 +158,41 @@
 }
 
 /* line 144, ../sass/partials/_fl-league.sass */
-.match-modal input[type=number] {
+.match-modal .hidden-xs .vs {
+  font-size: 150%;
+}
+/* line 147, ../sass/partials/_fl-league.sass */
+.match-modal .hidden-xs input[type=number] {
   width: 75px;
   font-size: 230%;
 }
-/* line 148, ../sass/partials/_fl-league.sass */
+/* line 151, ../sass/partials/_fl-league.sass */
+.match-modal input[type=number] {
+  width: 48px;
+  font-size: 130%;
+}
+/* line 155, ../sass/partials/_fl-league.sass */
 .match-modal .vs {
-  font-size: 150%;
   line-height: 10;
 }
-/* line 152, ../sass/partials/_fl-league.sass */
+/* line 158, ../sass/partials/_fl-league.sass */
 .match-modal .thumbnail {
   display: inline;
 }
 
-/* line 160, ../sass/partials/_fl-league.sass */
+/* line 166, ../sass/partials/_fl-league.sass */
 .seasonEdit .players {
   border-radius: 5px;
   border: 2px dashed #868686;
   margin: 10px 10px 0 0;
   padding: 5px;
 }
-/* line 166, ../sass/partials/_fl-league.sass */
+/* line 172, ../sass/partials/_fl-league.sass */
 .seasonEdit .player {
   cursor: move;
   padding: 10px 15px;
 }
-/* line 170, ../sass/partials/_fl-league.sass */
+/* line 176, ../sass/partials/_fl-league.sass */
 .seasonEdit .player-placeholder {
   padding: 5px 15px;
   border: 4px dashed #cfcfcf;
@@ -192,18 +200,18 @@
   text-align: center;
   vertical-align: middle;
 }
-/* line 177, ../sass/partials/_fl-league.sass */
+/* line 183, ../sass/partials/_fl-league.sass */
 .seasonEdit .player-placeholder:before {
   color: #cfcfcf;
   content: "DROP HERE";
 }
 
-/* line 186, ../sass/partials/_fl-league.sass */
+/* line 192, ../sass/partials/_fl-league.sass */
 .upload-photos .preview {
   float: left;
   margin-right: 10px;
 }
-/* line 190, ../sass/partials/_fl-league.sass */
+/* line 196, ../sass/partials/_fl-league.sass */
 .upload-photos #photosDropZone {
   padding: 35px 0;
   border: 5px dashed #e5e5e5;
@@ -214,24 +222,24 @@
   font-weight: bold;
   color: gray;
 }
-/* line 191, ../sass/partials/_fl-league.sass */
+/* line 197, ../sass/partials/_fl-league.sass */
 .upload-photos #photosDropZone:before {
   content: "DROP HERE";
 }
-/* line 194, ../sass/partials/_fl-league.sass */
+/* line 200, ../sass/partials/_fl-league.sass */
 .upload-photos #photosDropZone.initializing {
   opacity: 0.3;
 }
-/* line 195, ../sass/partials/_fl-league.sass */
+/* line 201, ../sass/partials/_fl-league.sass */
 .upload-photos #photosDropZone.initializing:before {
   content: "LOADING.. PLEASE WAIT";
 }
-/* line 208, ../sass/partials/_fl-league.sass */
+/* line 214, ../sass/partials/_fl-league.sass */
 .upload-photos #photosDropZone button {
   margin-top: 10px;
   text-transform: uppercase;
 }
-/* line 212, ../sass/partials/_fl-league.sass */
+/* line 218, ../sass/partials/_fl-league.sass */
 .upload-photos #photosDropZone input {
   display: none;
 }
@@ -312,8 +320,8 @@ html, body {
 }
 /* line 56, ../sass/partials/_fl-index.sass */
 #page-main .page-footer ul, #page-main .page-footer ol {
-  -webkit-padding-start: 0;
-  -webkit-margin-after: 0;
+  padding: 0;
+  margin: 0;
 }
 /* line 64, ../sass/partials/_fl-index.sass */
 #page-main .page-footer .footer-links {
