--- a/app/sass/partials/_fl-index.sass
+++ b/app/sass/partials/_fl-index.sass
@@ -54,8 +54,8 @@ html, body
 			border-top: 1px #e7e7e7 solid
 
 		ul, ol
-			-webkit-padding-start: 0
-			-webkit-margin-after: 0
+			padding: 0
+			margin: 0
 
 		+stretch-x
 		bottom: 0
